# rust-kafka-service

./: Cargo.toml
src/: consumer.rs  handlers.rs  lib.rs  main.rs  models.rs  processor.rs  producer.rs
