[package]
name = "rust-kafka-test"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
config = "0.14.0"
axum = { version = "0.7.5", features = ["default"] }
axum-macros = "0.4.1"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
headers = "0.4.0"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
rdkafka = "0.36.2"
chrono = "0.4.38"
reqwest = { version = "0.12.5", features = ["json"] }
governor = "0.6.3"
anyhow = "1.0.86"
